--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,37 @@
+ul,
+ul li {
+  list-style: none;
+}
+
 .container {
   margin: 0 auto;
   max-width: 1140px;
 }
+
 .App {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
 }
+
 .card {
   border: 1px solid black;
   width: 300px;
   height: 200px;
-  
+
 }
+
 .line1,
 .line2 {
   display: flex;
 }
+
 .card_avatar {
   height: 60px;
   border-radius: 50px;
+}
+
+.pagination {
+  display: flex;
 }
