--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
+body {
+  margin: 0;
+}
 ul,
 ul li {
   list-style: none;
+}
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+  color: black;
 }
 
 .container {
@@ -8,30 +17,99 @@ ul li {
   max-width: 1140px;
 }
 
-.App {
+
+
+.search {
+  background: lightgrey;
+  padding: 15px;
+}
+
+.searchField {
+
+  padding: 30px;
   display: flex;
-  justify-content: center;
+}
+
+.input {
+  width: 100%;
+  height: 60px;
+  margin-bottom: 30px;
+  font-size: 17px;
+  padding-left: 15px;
+}
+
+.btn {
+  height: 66px;
+}
+
+.listCard {
+  background: white;
+  margin: 20px;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
+  padding: 20px;
   gap: 20px;
 }
 
 .card {
   border: 1px solid black;
-  width: 300px;
+  width: 320px;
   height: 200px;
-
 }
 
 .line1,
 .line2 {
   display: flex;
 }
-
+.card_name,
+.card_avatar,
+.line2 {
+  margin-left: 15px;
+}
 .card_avatar {
   height: 60px;
   border-radius: 50px;
 }
-
+.card_author {
+  margin-left: 10px;
+}
+.card_img {
+  margin-top: 9px;
+  height: 26px;
+}
+.card_stargazers_count {
+  margin-right: 25px;
+}
+.paginations {
+  width: 100%;
+  margin: 0 auto;
+}
 .pagination {
-  display: flex;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  
+}
+.pagination li {
+  display: inline;
+}
+.btn_pagination {
+  display: inline;
+  background: white;
+  height: 40px;
+  width: 40px;
+}
+.page-link-active {
+  background: lightskyblue;
+  color: black;
+}
+@media screen and (max-width: 773px) {
+  .cards {
+    justify-content: center;
+  }
+  
 }
